    both:
           loop (N)
	     {
	        if (foo) 
		  break; % execute the else block if present
	     }
	   then 
	     { 
	        % This block executes if the loop ran to completion
	     }
	   else
	     {
	        % This block executes if the loop was broken prematurely
	     }

18. slsh/scripts/slprof: Rewrote much of this script to make it more
    friendly and useful.

{{{ Previous Versions

Changes since 2.0.6
1. src/slmath.c: if a double precision array was passed to nint, it
   was treated as a single precision one leading to a core dump.
2. src/sldisply.c: The Is_Fg_BGR variable was re-introduced and a typo
   affecting it was corrected.
3. src/slinclud.h: Do not include malloc.h on FreeBSD (Renato Botelho
   garga at freebsd, org).
4. doc/tm/cslang.tm: Changed a couple of occurances of "unsigned char"
   to "SLtype".  (Doug Burke dburke at head, cfa, harvard, edu)
5. doc/tm/rtl/list.tm:  Documentation changed to indicate that the
   third parameters to list_append/insert are optional.  (Doug Burke).
6. src/slwcwidth.c: Added a new function to the API called
   SLwchar_set_wcwidth_flags.  This may be used to force
   SLwchar_wcwidth to 1 for double width characters.  Such a feature
   is sometimes needed for fixed fonts that treat single and double
   width characters the same.
7. slsh/lib/slshrl.sl: The readline-massage hook was interpreting
   lines beginning with a '.' as RPN.
8. slsh/lib/sldb*.sl: The debugger was not stopping upon errors
   generated by the deprecated function verror.
9. src/slparse.c: "++()" was flagged by the parser as an error, but no
   error message for it was being generated.
10. src/slang.h: #if HAVE_LONG_LONG changed to #ifdef HAVE_LONG_LONG
11. src/slsmg.c:  Return right away if SLsmg_write_chars is told to
    write 0 characters.  Also a bug fixed in the logic of this routine
    involving the test for overwriting the second half of a double
    width character.