@@ -705,8 +705,7 @@ for fun.";
 หมายจะฆ่ามดชั่วตัวสำคัญ\
 รับหมาป่าเข้ามาเลยอาสัญ\
 ใช้สาวนั้นเป็นชนวนชื่นชวนใจ\
-ช่างอาเพศจริงหนาฟ้าร้องไห้\
-ฤๅหาใครค้ำชูกู้บรรลังก์ ฯ",
+ฤๅหาใครค้ำชูกู้บร",
 	     "(CJK)を選択しる違いを知りたければ\
 を設|ctrls:\x01\x02\x84|定した状態とを選択した状態の両方で"
 	  };
